# boiler-watch-api

./: .gitignore  Cargo.toml  README.md  Rocket.toml  default.nix  design.txt  sensor.toml
.cargo/: config.toml
.github/artifacts/: sources.list
.github/workflows/: ci.yml  rpi.yml  rust.yml
src/: database.rs  main.rs  recorder_scheduler.rs  state.rs  temperature_reader.rs  temperature_recorder.rs
