[package]
name = "boiler-watch-api"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
clokwerk = "0.4.0"
filesize = "0.2.0"
log = "0.4.20"
rocket_cors = "0.6.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = "1.0.130"
toml = "0.8.8"

[dependencies.rocket]
version = "0.5.0-rc.4"
features = ["json"]
